--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,19 @@
-.App {
-  text-align: center;
+body,
+html,
+#root {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+* {
+  font-family: 'Major Mono Display', monospace;
+  color: blueviolet;
+  text-underline-offset: .25em;
 }
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,17 +21,24 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding: 4em;
 }
 
-.App-link {
-  color: #61dafb;
+.App {
+  flex-wrap: wrap;
+  text-align: center;
+  justify-content: space-evenly;
+  flex-direction: column;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 3em;
+}
+
+.card {
+  size: 25%;
+  text-align: center;
 }
